--- a/memory_game/harder.html
+++ b/memory_game/harder.html
@@ -8,16 +8,16 @@
 	<body>
 	  	
 	  	<header>
-	  		<h1>Memory Game</h1>
+	  		<h1>Advanced Memory Game</h1>
 	  	</header>
 	  	<nav>
 	  		<a href="#">Instructions</a> 
 	  		<a href="#">Game</a>
-	  		<a href="harder.html" class ="extra">Next Level</a>
+	  		<a href="#" class ="extra">Next Level</a>
 	  	</nav>
 	  	<main>
 		  	<h2>Instructions</h2>
-		  	<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+		  	<p>Let's level things up a bit, huh? Instead of four cards, lets take things up a notch, how about 16 cards. This time, instead of guessing, we will let you flip as many times as necessary, try to remember where each card is! Enjoy. Match the rank of the card: King to King/Jack to Jack</p>
 		  	
 		  	<div id="game-board" class="board clearfix"></div>
 		  	<span id="score">Score: 0</span>
@@ -27,6 +27,6 @@
   	<p class="copyright">Copyright 2017</p>
   	<p class="message">Created with &hearts; by <span class="name">GA</span></p>
 	</footer>
-	<script src="js/main.js"></script>
+	<script src="js/harder.js"></script>
 </body>
 </html>
